[gd_scene load_steps=13 format=3 uid="uid://vukmevc4jy3r"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_25v1c"]
[ext_resource type="Texture2D" uid="uid://b3tknty2ti0ea" path="res://Assets/0x72_DungeonTilesetII_v1.7/0x72_DungeonTilesetII_v1.7.png" id="2_26guj"]
[ext_resource type="Script" path="res://Scripts/PlayerWeaponSlot.gd" id="3_wnx46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7rfvx"]
size = Vector2(4, 11.0649)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uk50r"]
size = Vector2(8.14936, 11.1489)

[sub_resource type="Animation" id="Animation_lawin"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jjph4"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_jevob"]
resource_name = "running"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ajdkd"]
resource_name = "swing"
length = 0.3

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2lk7v"]
_data = {
"RESET": SubResource("Animation_lawin"),
"idle": SubResource("Animation_jjph4"),
"running": SubResource("Animation_jevob"),
"swing": SubResource("Animation_ajdkd")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3kf8"]
bg_color = Color(0.131124, 0.277923, 0.181581, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi6xm"]
bg_color = Color(0.15117, 0.723213, 0, 1)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_25v1c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(1, 0.361503)
shape = SubResource("RectangleShape2D_7rfvx")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0, -3)
texture = ExtResource("2_26guj")
hframes = 9
region_enabled = true
region_rect = Rect2(128, 69, 144, 30)

[node name="Hitbox" type="Area2D" parent="Sprite2D"]
position = Vector2(1, 4)
scale = Vector2(1.21489, 1.16987)
collision_layer = 2
collision_mask = 20

[node name="HitboxShape" type="CollisionShape2D" parent="Sprite2D/Hitbox"]
position = Vector2(-0.82312, -0.854796)
scale = Vector2(0.808034, 0.920049)
shape = SubResource("RectangleShape2D_uk50r")
debug_color = Color(1, 0.00568212, 0.0589638, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2lk7v")
}
autoplay = "idle"

[node name="Healthbar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -7.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = -11.0
scale = Vector2(0.617354, 0.698736)
theme_override_styles/background = SubResource("StyleBoxFlat_h3kf8")
theme_override_styles/fill = SubResource("StyleBoxFlat_bi6xm")
value = 100.0
show_percentage = false

[node name="HealthRegen" type="Timer" parent="."]
autostart = true

[node name="Take_Damage_Cooldown" type="Timer" parent="."]

[node name="PlayerWeapons" type="Marker2D" parent="."]

[node name="WeaponSlot" type="Node2D" parent="PlayerWeapons"]
script = ExtResource("3_wnx46")

[node name="WeaponSlot2" type="Node2D" parent="PlayerWeapons"]
script = ExtResource("3_wnx46")

[node name="WeaponSlot3" type="Node2D" parent="PlayerWeapons"]
script = ExtResource("3_wnx46")

[node name="WeaponSlot4" type="Node2D" parent="PlayerWeapons"]
script = ExtResource("3_wnx46")

[node name="WeaponSlot5" type="Node2D" parent="PlayerWeapons"]
script = ExtResource("3_wnx46")

[node name="WeaponSlot6" type="Node2D" parent="PlayerWeapons"]
script = ExtResource("3_wnx46")

[connection signal="body_entered" from="Sprite2D/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Sprite2D/Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="HealthRegen" to="." method="_on_health_regen_timeout"]
